--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -7,7 +7,7 @@
         android:id="@+id/search"
         android:icon="@drawable/ic_search_white"
         app:showAsAction="ifRoom"
-        app:actionViewClass="android.support.v7.widget.SearchView" />
+        app:actionViewClass="android.widget.SearchView" />
 
     <item
         android:id="@+id/delete_all"
